syntax = "proto3";

package exchange;

service ExchangeValue{
  rpc Exchange (ExchangeRequest) returns (ExchangeReply) {}
  rpc ExchangeRates (Empty) returns (ExchangeRatesReply) {}
}

message Empty{

}

message ExchangeRequest{
  float amount = 1;
  string from = 2;
  string to = 3;
}

message ExchangeReply{
  float value = 1;
}

message ExchangeRatesReply{
  string rates = 1;
}
